fix: [PL-21137]: Alignment fixes when Invalid entities yaml is saved (#6641)
* fix: [PL-21137]: invalid alignment fixes

* chore: [PL-21137]: clean up

* fix: [PL-21137]: Fixed one of skipped test of ConnectorListView.test.tsx

* fix: [PL-21137]: Fixed mone skipped test of ConnectorListView.test.tsx

--- a/src/modules/35-connectors/pages/connectors/views/ConnectorsListView.module.scss
+++ b/src/modules/35-connectors/pages/connectors/views/ConnectorsListView.module.scss
@@ -32,6 +32,7 @@
   max-width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
   color: var(--grey-400);
 }
 .wrapper {
@@ -40,6 +41,7 @@
     max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
   }
   .flex {
     display: flex;
